packages/parser/test/corpus/activity/01_basic_nodes.txt
===========================
Simple activity node
===========================
@startuml
:Hello World;
@enduml
----------------------------
(source_file
  (diagram
    (startuml_directive)
    (activity_element
      (activity_node
        label: (activity_label)))
    (enduml_directive)))

===========================
Multiple activity nodes
===========================
@startuml
:Step 1;
:Step 2;
:Step 3;
@enduml
----------------------------
(source_file
  (diagram
    (startuml_directive)
    (activity_element
      (activity_node
        label: (activity_label)))
    (activity_element
      (activity_node
        label: (activity_label)))
    (activity_element
      (activity_node
        label: (activity_label)))
    (enduml_directive)))

===========================
Activity node with flow arrow
===========================
@startuml
:Step 1;
->:Next step
:Step 2;
@enduml
----------------------------
(source_file
  (diagram
    (startuml_directive)
    (activity_element
      (activity_node
        label: (activity_label)))
    (activity_element
      (flow_arrow
        type: (arrow_type)
        label: (arrow_label)))
    (activity_element
      (activity_node
        label: (activity_label)))
    (enduml_directive)))

===========================
Start and stop nodes
===========================
@startuml
start
:Process;
stop
@enduml
----------------------------
(source_file
  (diagram
    (startuml_directive)
    (activity_element
      (start_node))
    (activity_element
      (activity_node
        label: (activity_label)))
    (activity_element
      (stop_node))
    (enduml_directive)))

===========================
Start and end with parentheses
===========================
@startuml
start
:Process;
stop
@enduml
----------------------------
(source_file
  (diagram
    (startuml_directive)
    (activity_element
      (start_node))
    (activity_element
      (activity_node
        label: (activity_label)))
    (activity_element
      (stop_node))
    (enduml_directive)))

===========================
Simple flow with arrows
===========================
@startuml
start
:Initialize;
->
:Process;
->
:Finalize;
stop
@enduml
----------------------------
(source_file
  (diagram
    (startuml_directive)
    (activity_element
      (start_node))
    (activity_element
      (activity_node
        label: (activity_label)))
    (activity_element
      (flow_arrow
        type: (arrow_type)))
    (activity_element
      (activity_node
        label: (activity_label)))
    (activity_element
      (flow_arrow
        type: (arrow_type)))
    (activity_element
      (activity_node
        label: (activity_label)))
    (activity_element
      (stop_node))
    (enduml_directive)))

===========================
Dashed flow arrow with label
===========================
@startuml
:A;
-->:Go
:B;
@enduml
----------------------------
(source_file
  (diagram
    (startuml_directive)
    (activity_element
      (activity_node
        label: (activity_label)))
    (activity_element
      (flow_arrow
        type: (arrow_type)
        label: (arrow_label)))
    (activity_element
      (activity_node
        label: (activity_label)))
    (enduml_directive)))

===========================
Kill terminator
===========================
@startuml
:A;
kill
:B;
@enduml
----------------------------
(source_file
  (diagram
    (startuml_directive)
    (activity_element
      (activity_node
        label: (activity_label)))
    (activity_element
      (kill))
    (activity_element
      (activity_node
        label: (activity_label)))
    (enduml_directive)))

===========================
Detach terminator
===========================
@startuml
:A;
detach
:B;
@enduml
----------------------------
(source_file
  (diagram
    (startuml_directive)
    (activity_element
      (activity_node
        label: (activity_label)))
    (activity_element
      (detach))
    (activity_element
      (activity_node
        label: (activity_label)))
    (enduml_directive)))
