packages/parser/test/corpus/activity/03_loops.txt
===========================
While loop
===========================
@startuml
while (Has items?)
  :Process item;
endwhile
@enduml
----------------------------
(source_file
  (diagram
    (startuml_directive)
    (activity_element
      (while_loop
        condition: (condition)
        (activity_element
          (activity_node
            label: (activity_label)))))
    (enduml_directive)))

===========================
While loop with body
===========================
@startuml
while (condition?)
  :Action 1;
  :Action 2;
endwhile
@enduml
----------------------------
(source_file
  (diagram
    (startuml_directive)
    (activity_element
      (while_loop
        condition: (condition)
        (activity_element
          (activity_node
            label: (activity_label)))
        (activity_element
          (activity_node
            label: (activity_label)))))
    (enduml_directive)))

===========================
Nested while loops
===========================
@startuml
while (outer?)
  while (inner?)
    :Nested action;
  endwhile
endwhile
@enduml
----------------------------
(source_file
  (diagram
    (startuml_directive)
    (activity_element
      (while_loop
        condition: (condition)
        (activity_element
          (while_loop
            condition: (condition)
            (activity_element
              (activity_node
                label: (activity_label)))))))
    (enduml_directive)))

===========================
While with if inside
===========================
@startuml
while (continue?)
  if (check?) then
    :Do something;
  endif
endwhile
@enduml
----------------------------
(source_file
  (diagram
    (startuml_directive)
    (activity_element
      (while_loop
        condition: (condition)
        (activity_element
          (decision_node
            condition: (condition)
            (activity_element
              (activity_node
                label: (activity_label)))))))
    (enduml_directive)))

===========================
Simple while loop
===========================
@startuml
while (ready?)
  :wait;
endwhile
@enduml
----------------------------
(source_file
  (diagram
    (startuml_directive)
    (activity_element
      (while_loop
        condition: (condition)
        (activity_element
          (activity_node
            label: (activity_label)))))
    (enduml_directive)))

===========================
Repeat loop
===========================
@startuml
repeat
  :Task;
repeat while (Again?)
@enduml
----------------------------
(source_file
  (diagram
    (startuml_directive)
    (activity_element
      (repeat_loop
        (activity_element
          (activity_node
            label: (activity_label)))
        condition: (condition)))
    (enduml_directive)))

===========================
Repeat loop with label
===========================
@startuml
repeat
  :Read;
repeat while (more?) is (yes)
@enduml
----------------------------
(source_file
  (diagram
    (startuml_directive)
    (activity_element
      (repeat_loop
        (activity_element
          (activity_node
            label: (activity_label)))
        condition: (condition)
        label: (branch_label)))
    (enduml_directive)))
