packages/parser/test/corpus/activity/05_forks.txt
===========================
Simple fork and join
===========================
@startuml
fork
  :Task 1;
fork again
  :Task 2;
end fork
@enduml
----------------------------
(source_file
  (diagram
    (startuml_directive)
    (activity_element
      (fork_node))
    (activity_element
      (activity_node
        label: (activity_label)))
    (activity_element
      (fork_node))
    (activity_element
      (activity_node
        label: (activity_label)))
    (activity_element
      (join_node))
    (enduml_directive)))

===========================
Split and join
===========================
@startuml
split
  :Process A;
split again
  :Process B;
split again
  :Process C;
end split
@enduml
----------------------------
(source_file
  (diagram
    (startuml_directive)
    (activity_element
      (split_node))
    (activity_element
      (activity_node
        label: (activity_label)))
    (activity_element
      (split_node))
    (activity_element
      (activity_node
        label: (activity_label)))
    (activity_element
      (split_node))
    (activity_element
      (activity_node
        label: (activity_label)))
    (activity_element
      (split_join_node))
    (enduml_directive)))

===========================
Fork with multiple activities
===========================
@startuml
start
fork
  :Action 1;
  :Action 2;
fork again
  :Action 3;
  :Action 4;
end fork
stop
@enduml
----------------------------
(source_file
  (diagram
    (startuml_directive)
    (activity_element
      (start_node))
    (activity_element
      (fork_node))
    (activity_element
      (activity_node
        label: (activity_label)))
    (activity_element
      (activity_node
        label: (activity_label)))
    (activity_element
      (fork_node))
    (activity_element
      (activity_node
        label: (activity_label)))
    (activity_element
      (activity_node
        label: (activity_label)))
    (activity_element
      (join_node))
    (activity_element
      (stop_node))
    (enduml_directive)))
