packages/parser/test/corpus/activity/06_directives.txt
===========================
Title directive
===========================
@startuml
title Simple Activity Diagram
start
:Process;
stop
@enduml
----------------------------
(source_file
  (diagram
    (startuml_directive)
    (directive_statement
      (title_directive
        content: (text_content)))
    (activity_element
      (start_node))
    (activity_element
      (activity_node
        label: (activity_label)))
    (activity_element
      (stop_node))
    (enduml_directive)))


===========================
Skinparam directive
===========================
@startuml
skinparam backgroundColor LightYellow
:Process;
@enduml
----------------------------
(source_file
  (diagram
    (startuml_directive)
    (directive_statement
      (skinparam_directive
        parameter: (identifier)
        value: (text_content)))
    (activity_element
      (activity_node
        label: (activity_label)))
    (enduml_directive)))
