packages/parser/test/corpus/activity/07_real_world.txt
===========================
Complete login flow
===========================
@startuml
title User Login Flow
start
:User enters credentials;
if (Valid credentials?) then (yes)
  :Load user profile;
  :Initialize session;
  stop
else (no)
  :Show error message;
  if (Retry attempts < 3?) then (yes)
    :Allow retry;
  else (no)
    :Lock account;
    stop
  endif
endif
@enduml
----------------------------
(source_file
  (diagram
    (startuml_directive)
    (directive_statement
      (title_directive
        content: (text_content)))
    (activity_element
      (start_node))
    (activity_element
      (activity_node
        label: (activity_label)))
    (activity_element
      (decision_node
        condition: (condition)
        true_label: (branch_label)
        (activity_element
          (activity_node
            label: (activity_label)))
        (activity_element
          (activity_node
            label: (activity_label)))
        (activity_element
          (stop_node))
        (else_branch
          label: (branch_label)
          (activity_element
            (activity_node
              label: (activity_label)))
          (activity_element
            (decision_node
              condition: (condition)
              true_label: (branch_label)
              (activity_element
                (activity_node
                  label: (activity_label)))
              (else_branch
                label: (branch_label)
                (activity_element
                  (activity_node
                    label: (activity_label)))
                (activity_element
                  (stop_node))))))))
    (enduml_directive)))

===========================
Data processing with partitions
===========================
@startuml
partition "Data Ingestion" {
  :Read file;
  :Parse content;
}
partition "Processing" #LightBlue {
  :Transform data;
  :Validate;
}
partition "Storage" #LightGreen {
  :Save to database;
}
@enduml
----------------------------
(source_file
  (diagram
    (startuml_directive)
    (activity_element
      (partition
        name: (string)
        (activity_element
          (activity_node
            label: (activity_label)))
        (activity_element
          (activity_node
            label: (activity_label)))))
    (activity_element
      (partition
        name: (string)
        color: (color)
        (activity_element
          (activity_node
            label: (activity_label)))
        (activity_element
          (activity_node
            label: (activity_label)))))
    (activity_element
      (partition
        name: (string)
        color: (color)
        (activity_element
          (activity_node
            label: (activity_label)))))
    (enduml_directive)))

===========================
Parallel processing
===========================
@startuml
start
fork
  :Process batch 1;
  :Validate batch 1;
fork again
  :Process batch 2;
  :Validate batch 2;
fork again
  :Process batch 3;
  :Validate batch 3;
end fork
:Merge results;
stop
@enduml
----------------------------
(source_file
  (diagram
    (startuml_directive)
    (activity_element
      (start_node))
    (activity_element
      (fork_node))
    (activity_element
      (activity_node
        label: (activity_label)))
    (activity_element
      (activity_node
        label: (activity_label)))
    (activity_element
      (fork_node))
    (activity_element
      (activity_node
        label: (activity_label)))
    (activity_element
      (activity_node
        label: (activity_label)))
    (activity_element
      (fork_node))
    (activity_element
      (activity_node
        label: (activity_label)))
    (activity_element
      (activity_node
        label: (activity_label)))
    (activity_element
      (join_node))
    (activity_element
      (activity_node
        label: (activity_label)))
    (activity_element
      (stop_node))
    (enduml_directive)))

===========================
Loop with decision
===========================
@startuml
start
while (Has data?) is (yes)
  :Read record;
  if (Valid?) then (yes)
    :Process;
  else (no)
    :Log error;
  endif
endwhile (no)
:Finalize;
stop
@enduml
----------------------------
(source_file
  (diagram
    (startuml_directive)
    (activity_element
      (start_node))
    (activity_element
      (while_loop
        condition: (condition)
        label: (branch_label)
        (activity_element
          (activity_node
            label: (activity_label)))
        (activity_element
          (decision_node
            condition: (condition)
            true_label: (branch_label)
            (activity_element
              (activity_node
                label: (activity_label)))
            (else_branch
              label: (branch_label)
              (activity_element
                (activity_node
                  label: (activity_label))))))
        end_label: (branch_label)))
    (activity_element
      (activity_node
        label: (activity_label)))
    (activity_element
      (stop_node))
    (enduml_directive)))
